Acrescentado a verificacao de integridade do LB da AWS